// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden replay — flip7-bust-and-x2 > folds a round containing a bust, a x2 multiplier and a Flip 7 1`] = `
{
  "cumulativeScores": {
    "alice": 57,
    "bob": 0,
  },
  "currentRound": {
    "cardsDealt": [
      {
        "id": "num-5-1",
        "kind": "number",
        "value": 5,
      },
      {
        "id": "num-5-2",
        "kind": "number",
        "value": 5,
      },
      {
        "id": "num-0-1",
        "kind": "number",
        "value": 0,
      },
      {
        "id": "mod-x2-1",
        "kind": "modifier",
        "modifier": "x2",
      },
      {
        "id": "num-1-1",
        "kind": "number",
        "value": 1,
      },
      {
        "id": "num-2-1",
        "kind": "number",
        "value": 2,
      },
      {
        "id": "num-3-1",
        "kind": "number",
        "value": 3,
      },
      {
        "id": "num-4-1",
        "kind": "number",
        "value": 4,
      },
      {
        "id": "num-5-3",
        "kind": "number",
        "value": 5,
      },
      {
        "id": "num-6-1",
        "kind": "number",
        "value": 6,
      },
    ],
    "dealerId": "alice",
    "pendingResolutions": [],
    "players": {
      "alice": {
        "heldSecondChance": null,
        "manualScore": null,
        "modifierCards": [
          {
            "id": "mod-x2-1",
            "kind": "modifier",
            "modifier": "x2",
          },
        ],
        "numberCards": [
          {
            "id": "num-0-1",
            "kind": "number",
            "value": 0,
          },
          {
            "id": "num-1-1",
            "kind": "number",
            "value": 1,
          },
          {
            "id": "num-2-1",
            "kind": "number",
            "value": 2,
          },
          {
            "id": "num-3-1",
            "kind": "number",
            "value": 3,
          },
          {
            "id": "num-4-1",
            "kind": "number",
            "value": 4,
          },
          {
            "id": "num-5-3",
            "kind": "number",
            "value": 5,
          },
          {
            "id": "num-6-1",
            "kind": "number",
            "value": 6,
          },
        ],
        "playerId": "alice",
        "status": "flipped7",
      },
      "bob": {
        "heldSecondChance": null,
        "manualScore": null,
        "modifierCards": [],
        "numberCards": [
          {
            "id": "num-5-1",
            "kind": "number",
            "value": 5,
          },
          {
            "id": "num-5-2",
            "kind": "number",
            "value": 5,
          },
        ],
        "playerId": "bob",
        "status": "busted",
      },
    },
    "roundNumber": 1,
  },
  "players": [
    {
      "id": "alice",
      "name": "Alice",
    },
    {
      "id": "bob",
      "name": "Bob",
    },
  ],
  "purist": false,
  "roundNumber": 1,
  "status": "active",
  "targetScore": 200,
}
`;

exports[`golden replay — three-player-multi-round > folds to the expected final state and scoreboard, with the dealer rotated once 1`] = `
{
  "cumulativeScores": {
    "alice": 13,
    "bob": 2,
    "cara": 19,
  },
  "currentRound": {
    "cardsDealt": [
      {
        "id": "num-5-1",
        "kind": "number",
        "value": 5,
      },
      {
        "id": "num-5-2",
        "kind": "number",
        "value": 5,
      },
      {
        "id": "num-3-1",
        "kind": "number",
        "value": 3,
      },
      {
        "id": "num-7-1",
        "kind": "number",
        "value": 7,
      },
      {
        "id": "num-2-2",
        "kind": "number",
        "value": 2,
      },
    ],
    "dealerId": "bob",
    "pendingResolutions": [],
    "players": {
      "alice": {
        "heldSecondChance": null,
        "manualScore": null,
        "modifierCards": [],
        "numberCards": [
          {
            "id": "num-3-1",
            "kind": "number",
            "value": 3,
          },
        ],
        "playerId": "alice",
        "status": "stayed",
      },
      "bob": {
        "heldSecondChance": null,
        "manualScore": null,
        "modifierCards": [],
        "numberCards": [
          {
            "id": "num-5-1",
            "kind": "number",
            "value": 5,
          },
          {
            "id": "num-5-2",
            "kind": "number",
            "value": 5,
          },
        ],
        "playerId": "bob",
        "status": "busted",
      },
      "cara": {
        "heldSecondChance": null,
        "manualScore": null,
        "modifierCards": [],
        "numberCards": [
          {
            "id": "num-7-1",
            "kind": "number",
            "value": 7,
          },
          {
            "id": "num-2-2",
            "kind": "number",
            "value": 2,
          },
        ],
        "playerId": "cara",
        "status": "stayed",
      },
    },
    "roundNumber": 2,
  },
  "players": [
    {
      "id": "alice",
      "name": "Alice",
    },
    {
      "id": "bob",
      "name": "Bob",
    },
    {
      "id": "cara",
      "name": "Cara",
    },
  ],
  "purist": false,
  "roundNumber": 2,
  "status": "active",
  "targetScore": 200,
}
`;

exports[`golden replay — two-player-simple > folds to the expected final state and scoreboard 1`] = `
{
  "cumulativeScores": {
    "alice": 8,
    "bob": 10,
  },
  "currentRound": {
    "cardsDealt": [
      {
        "id": "num-5-1",
        "kind": "number",
        "value": 5,
      },
      {
        "id": "num-8-1",
        "kind": "number",
        "value": 8,
      },
      {
        "id": "num-3-1",
        "kind": "number",
        "value": 3,
      },
      {
        "id": "num-2-1",
        "kind": "number",
        "value": 2,
      },
    ],
    "dealerId": "alice",
    "pendingResolutions": [],
    "players": {
      "alice": {
        "heldSecondChance": null,
        "manualScore": null,
        "modifierCards": [],
        "numberCards": [
          {
            "id": "num-5-1",
            "kind": "number",
            "value": 5,
          },
          {
            "id": "num-3-1",
            "kind": "number",
            "value": 3,
          },
        ],
        "playerId": "alice",
        "status": "stayed",
      },
      "bob": {
        "heldSecondChance": null,
        "manualScore": null,
        "modifierCards": [],
        "numberCards": [
          {
            "id": "num-8-1",
            "kind": "number",
            "value": 8,
          },
          {
            "id": "num-2-1",
            "kind": "number",
            "value": 2,
          },
        ],
        "playerId": "bob",
        "status": "stayed",
      },
    },
    "roundNumber": 1,
  },
  "players": [
    {
      "id": "alice",
      "name": "Alice",
    },
    {
      "id": "bob",
      "name": "Bob",
    },
  ],
  "purist": false,
  "roundNumber": 1,
  "status": "active",
  "targetScore": 200,
}
`;
